add form valid check on deletion of table row, remove debug output

--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -12,7 +12,7 @@
                 data-placement="left" title="Price not found">
         </td>
         <td>
-            <input type="number" class="form-control" placeholder="0" name="shares" onchange="check_form_valid()">
+            <input type="number" class="form-control" value="0" min="0" name="shares" onchange="check_form_valid()">
         </td>
         <td>
             <div class="input-group">
