--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -17,7 +17,7 @@
         <td>
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <span class="input-group-text">$</span>
+                    <span class="input-group-text" id="currency_display"></span>
                 </div>
                 <input type="number" class="no-spinner form-control border-right-0" step="0.01" name="prices">
                 <div class="input-group-append">
