add yahoo fallback to calculate process

--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -77,7 +77,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>This may take a while for large funds.</p>
+                <p>This may take a while for large funds or funds with a lot of assets that are not traded in the US. </p>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated"></div>
                 </div>
