Convert EUR to USD with current exchange rate for share calculation

--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -20,6 +20,7 @@
                     <span class="input-group-text" id="currency_display"></span>
                 </div>
                 <input type="number" class="no-spinner form-control border-right-0" step="0.01" name="prices">
+                <input type="hidden" name="currency" id="currency_input">
                 <div class="input-group-append">
                     <div class="input-group-text sp-divider bg-white">
                         <div class="spinner spinner-border spinner-border-sm hidden" role="status">
