--- a/etfcalc/templates/output/output.html
+++ b/etfcalc/templates/output/output.html
@@ -28,7 +28,11 @@
             <tr>
                 <td class="c2"><a href="{{ holding.link }}">{{ holding.name }}</a></td>
                 <td class="c2">{{ holding.ticker }}</td>
-                <td class="c2">{{ holding.sector }}</td>
+                {% if holding.sector == None %}
+                    <td class="c2"> Other/Unknown </td>
+                {% else %}
+                    <td class="c2">{{ holding.sector }}</td>
+                {%  endif %}
                 <td class="c2">{{ holding.weight }}%</td>
             </tr>
             {% endfor %}
