--- a/etfcalc/templates/base.html
+++ b/etfcalc/templates/base.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="/">My Portfolio<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" onclick="load_options()">Options</a>
+                <a class="nav-link" href="/options">Options</a>
               </li>
             </ul>
         </div>
