add option support for yahoo usage

--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -56,7 +56,7 @@
                     <th>Ticker</th>
                     <th>Shares</th>
                     <th class="w-25">Price</th>
-                    <th></th>
+                    <th> <input type="hidden" name="options" id="session_options"> </th>
                 </tr>
             </thead>
             <tbody id="holding-table"></tbody>
