--- a/etfcalc/templates/options/options.html
+++ b/etfcalc/templates/options/options.html
@@ -42,7 +42,7 @@
 </div>
 
 <div class="row float-right mr-1 pb-5">
-    <button type="button" class="btn btn-secondary mr-1" onclick="reset_options()">Reset</button>
+    <button type="button" class="btn btn-secondary mr-1" onclick="reset_options()">Reset to defaults</button>
     <button type="submit" class="btn btn-primary" form="portfolio"
         onclick="save_options()" id="submit">Save options</button>
 </div>
