add refresh button to each row

--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -34,6 +34,11 @@
                 <span>&times;</span>
             </button>
         </td>
+        <td>
+            <button type="button" class="btn btn-success btn-refresh-row" onclick="refresh_row(this)">
+                <span>&olarr;</span>
+            </button>
+        </td>
     </tr>
 </template>
 
@@ -55,6 +60,7 @@
                     <th>Ticker</th>
                     <th>Shares</th>
                     <th class="w-25">Price</th>
+                    <th></th>
                     <th></th>
                 </tr>
             </thead>
