add a button to refresh all stocks in the table

--- a/etfcalc/static/css/main.css
+++ b/etfcalc/static/css/main.css
@@ -6,6 +6,10 @@
     padding: 0.5rem;
 }
 
+.btn_header_cell {
+    padding: 0.5rem !important;
+}
+
 .dt-bootstrap4 {
     width: 100% !important;
 }
@@ -16,6 +20,11 @@
 
 .btn-refresh-row {
     font-weight: 700;
+}
+
+.btn-refresh-table {
+    font-weight: 900;
+    width: 100%;
 }
 
 .progress-bar {
