--- a/etfcalc/templates/input/input.html
+++ b/etfcalc/templates/input/input.html
@@ -60,8 +60,11 @@
                     <th>Ticker</th>
                     <th>Shares</th>
                     <th class="w-25">Price</th>
-                    <th></th>
-                    <th></th>
+                    <th colspan="2" class="btn_header_cell">
+                        <button type="button" class="btn btn-success btn-refresh-table" onclick="refresh_table(this)">
+                            <span>&olarr;</span>
+                        </button>
+                    </th>
                 </tr>
             </thead>
             <tbody id="holding-table"></tbody>
